# ihslib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
include/: ihslib.h
include/ihslib/: audio.h  buffer.h  client.h  common.h  crypto.h  datachannels.h  enumeration.h  hid.h  input.h  net.h  session.h  video.h
protobuf/: discovery.proto  hiddevices.proto  remoteplay.proto  steamdatagram_messages_auth.proto  steamdatagram_messages_sdr.proto  steammessages_hiddevices.proto  steammessages_remoteclient_service_messages.proto  steammessages_streamplayer.proto  steammessages_virtualcontroller.proto  steamnetworkingsockets_messages.proto  steamnetworkingsockets_messages_certs.proto  steamnetworkingsockets_messages_udp.proto
samples/: CMakeLists.txt  authorize.c  common.h  discover.c  stream.c
samples/stream/: CMakeLists.txt  alsaaud.c  decoders.h  gstvid.c  mmalvid.c  nullaud.c  nullvid.c  pipeline.c  requestor.c  stream.c  stream.h
scripts/: protobuf-src-fixup.py
src/: CMakeLists.txt  base.c  base.h  config.h.in  crc32.c  crc32.h  crc32c.c  crc32c.h  crypto.h  endianness.c  endianness.h  ihs_arraylist.c  ihs_arraylist.h  ihs_buffer.c  ihs_buffer.h  ihs_buffer_ext.h  ihs_enumeration.c  ihs_enumeration.h  ihs_enumeration_array.c  ihs_enumeration_ll.c  ihs_ip.c  ihs_queue.c  ihs_queue.h  ihs_thread.c  ihs_thread.h  ihs_thread_sdl.c  ihs_timer.c  ihs_timer.h  ihs_udp.c  ihs_udp.h  ihs_udp_posix.c  ihs_udp_sdl.c  memmem.c  memmem.h
src/client/: CMakeLists.txt  authorization.c  client.c  client_pri.h  discovery.c  pubkeys.h  streaming.c
src/crypto/: impl_mbedtls.c  impl_openssl.c
src/hid/: CMakeLists.txt  device.c  device.h  manager.c  manager.h  provider.c  provider.h  report.c  report.h
src/hid/hidapi/: CMakeLists.txt
src/hid/hidapi/include/ihslib/hid/: hidapi.h
src/hid/hidapi/src/: CMakeLists.txt  hidapi_provider.c
src/hid/sdl/: CMakeLists.txt  sdl_hid_common.h  sdl_hid_device.c  sdl_hid_enumerator.c  sdl_hid_enumerator_common.c  sdl_hid_enumerator_managed.c  sdl_hid_enumerator_unmanaged.c  sdl_hid_enumerators.h  sdl_hid_event.c  sdl_hid_feature_report.c  sdl_hid_manager.c  sdl_hid_provider.c  sdl_hid_report.c  sdl_hid_report.h  sdl_hid_utils.c  sdl_hid_write.c
src/hid/sdl/include/ihslib/hid/: sdl.h
src/hid/sdl/src/: CMakeLists.txt  config.h.in  sdl_hid_common.h  sdl_hid_device.c  sdl_hid_enumerator_common.c  sdl_hid_enumerator_managed.c  sdl_hid_enumerator_unmanaged.c  sdl_hid_enumerators.h  sdl_hid_event.c  sdl_hid_feature_report.c  sdl_hid_manager.c  sdl_hid_provider.c  sdl_hid_report.c  sdl_hid_report.h  sdl_hid_utils.c  sdl_hid_utils.h  sdl_hid_write.c
src/protobuf/: CMakeLists.txt  discovery.pb-c.c  discovery.pb-c.h  hiddevices.pb-c.c  hiddevices.pb-c.h  pb_utils.c  pb_utils.h  remoteplay.pb-c.c  remoteplay.pb-c.h
src/session/: CMakeLists.txt  callbacks.c  channel.c  channel.h  frame.c  frame.h  frame_crypto.c  frame_window.c  packet.c  packet.h  packet_sender.c  packet_sender.h  retransmission.c  retransmission.h  session.c  session_pri.h  window.c  window.h
src/session/channels/: CMakeLists.txt  ch_control.c  ch_control.h  ch_control_audio.c  ch_control_authentication.c  ch_control_keepalive.c  ch_control_negotiation.c  ch_control_video.c  ch_data.c  ch_data.h  ch_data_audio.c  ch_data_audio.h  ch_data_video.c  ch_data_video.h  ch_discovery.c  ch_discovery.h  ch_stats.c  ch_stats.h  channel.c  channel.h
src/session/channels/control/: CMakeLists.txt  control_cursor.c  control_hid.c  control_hid.h  control_input.c  control_input_kbd.c  control_input_mouse.c  control_input_touch.c
src/session/channels/control/hid/: device.c  device.h  manager.c  manager.h
src/session/channels/video/: CMakeLists.txt  callback_h264.c  callback_h264.h  ch_data_video.c  ch_data_video.h  frame_h264.c  frame_h264.h  frame_hevc.c  frame_hevc.h  partial_frame.c  partial_frame.h  partial_frames.c  partial_frames.h
tests/: CMakeLists.txt  test_arraylist.c  test_enumeration.c
tests/common/: CMakeLists.txt  test_session.c  test_session.h
tests/hid/: CMakeLists.txt  device_list_data.c  hid_manager.c  report_data.c
tests/hid/sdl/: CMakeLists.txt  test_sdl_hid.c  test_sdl_hid_device.c  test_sdl_hid_device_managed.c  test_sdl_hid_device_unmanaged.c  test_sdl_hid_report.c
tests/session/: CMakeLists.txt  packet_conn_read_write.c  packet_generation.c  packet_ping_resp.c  packet_serialization.c  test_ip_address.c  test_session.c  test_timer.c
tests/session/video/: CMakeLists.txt  test_partial_frames.c
